Register and Login UI add
Created basic UI of the Register and login UI, set onClickListeners

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,19 @@
     <string name="app_name">ChatApp</string>
     <string name="email">Email</string>
     <string name="password">Password</string>
-    <string name="photo">photo</string>
-    <string name="register">Register</string>
-    <string name="have_account">Already have an accout?</string>
+    <string name="photo" translatable="false">Photo</string>
+    <string name="register" translatable="false">Register</string>
+    <string name="have_account">Already have an account?</string>
+    <string name="title_activity_login">Sign in</string>
+    <string name="prompt_email">Email</string>
+    <string name="prompt_password">Password</string>
+    <string name="action_sign_in">Sign in or register</string>
+    <string name="action_sign_in_short">Sign in</string>
+    <string name="welcome">"Welcome !"</string>
+    <string name="invalid_username">Not a valid username</string>
+    <string name="invalid_password">Password must be >5 characters</string>
+    <string name="login_failed">"Login failed"</string>
+    <string name="login">Login</string>
+    <string name="firstRegister">You don\'t have an account?</string>
+    <string name="username">Username</string>
 </resources>
