ChatActivity and ChatRow creation
Created send and received chat row xml layout, refactor of code in StartActivityHelper class - template

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,6 @@
     <string name="username">Username</string>
     <string name="sign_out">Sign out</string>
     <string name="new_message">New Message</string>
+    <string name="enter_message">Enter Message</string>
+    <string name="send">Send</string>
 </resources>
