--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,6 @@
     <string name="new_message">New Message</string>
     <string name="enter_message">Enter Message</string>
     <string name="send">Send</string>
+    <string name="latest_message">Latest message</string>
+    <string name="timestamp">Sun</string>
 </resources>
